# sp1-core-aggregation-repro

./: .gitignore  Cargo.toml  README.md
program/aggregator/: Cargo.toml
program/aggregator/src/: main.rs
program/fibonacci/: Cargo.toml
program/fibonacci/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
