[workspace]
resolver = "2"
members = ["script"]
exclude = ["program/fibonacci", "program/aggregator"]

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
anyhow = "1.0"
sha2 = "0.10"
sp1-build = "=6.0.2"
sp1-sdk = { version = "=6.0.2", default-features = false, features = ["blocking"] }
tracing = "0.1"
