[package]
name = "sp1-core-aggregation-repro-script"
version = "0.1.0"
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
sp1-sdk = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
sp1-build = { workspace = true }
